# fdtd-pic-simulations

./: .gitignore  LICENSE  README.md  g_code_generating_notebook_slant.ipynb
.github/workflows/: ci.yml
fdtd-pic-simulations/: README.md  pyproject.toml  requirements.txt
fdtd-pic-simulations/fdtd_pic/: __init__.py  config.py  materials.py  modes.py  ring.py  sweep.py  waveguide.py
fdtd-pic-simulations/fdtd_pic/analytics/: __init__.py  ring.py
fdtd-pic-simulations/notebooks/: 00_setup_smoke_test.ipynb  01_mode_width_sweep.ipynb  02_coupler_gap_sweep.ipynb  03_ring_q_factor.ipynb
fdtd-pic-simulations/tests/: test_analytics.py  test_geometry.py
fdtd_pic/: config.py  coupler.py  modes.py  plotting.py  ring.py
fdtd_pic/analytics/: cmt.py
notebooks/: 00_setup_smoke_test.ipynb  01_mode_width_sweep.ipynb  02_coupler_gap_sweep.ipynb  03_ring_q_factor.ipynb  smoke_straight_wg.hdf5
scripts/: generate_assets.py  smoke_test.py  verify_auth.py
